--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 spring:
   config:
-    import: optional:configserver:https://bankati-config-server.onrender.com
+    import: optional:configserver:https://bankatii-config-server.onrender.com
   application:
     name: servicestiers-service
